--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,18 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
-ENCRYPTION_KEY=tobemodified
+
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_NAME=adminpanel
+DATABASE_USERNAME=admin
+DATABASE_PASSWORD=your_password_here
+DATABASE_SSL=false
+
+# Secrets (generate new ones for production)
+APP_KEYS=changeMe1,changeMe2
+API_TOKEN_SALT=changeMe
+ADMIN_JWT_SECRET=changeMe
+TRANSFER_TOKEN_SALT=changeMe
+JWT_SECRET=changeMe
